; ModuleID = '/home/carl/AnghaBench/php-src/ext/opcache/jit/dynasm/extr_minilua.c_lua_objlen.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/opcache/jit/dynasm/extr_minilua.c_lua_objlen.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i64 }
%struct.TYPE_3__ = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (i32*, i32)* @lua_objlen to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @lua_objlen(i32* %0, i32 %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  %8 = load i32*, i32** %4, align 8
  %9 = load i32, i32* %5, align 4
  %10 = call i32 @index2adr(i32* %8, i32 %9)
  store i32 %10, i32* %6, align 4
  %11 = load i32, i32* %6, align 4
  %12 = call i32 @ttype(i32 %11)
  switch i32 %12, label %41 [
    i32 4, label %13
    i32 7, label %18
    i32 5, label %23
    i32 3, label %27
  ]

13:                                               ; preds = %2
  %14 = load i32, i32* %6, align 4
  %15 = call %struct.TYPE_4__* @tsvalue(i32 %14)
  %16 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %15, i32 0, i32 0
  %17 = load i64, i64* %16, align 8
  store i64 %17, i64* %3, align 8
  br label %42

18:                                               ; preds = %2
  %19 = load i32, i32* %6, align 4
  %20 = call %struct.TYPE_3__* @uvalue(i32 %19)
  %21 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %20, i32 0, i32 0
  %22 = load i64, i64* %21, align 8
  store i64 %22, i64* %3, align 8
  br label %42

23:                                               ; preds = %2
  %24 = load i32, i32* %6, align 4
  %25 = call i32 @hvalue(i32 %24)
  %26 = call i64 @luaH_getn(i32 %25)
  store i64 %26, i64* %3, align 8
  br label %42

27:                                               ; preds = %2
  %28 = load i32*, i32** %4, align 8
  %29 = load i32, i32* %6, align 4
  %30 = call i32 @luaV_tostring(i32* %28, i32 %29)
  %31 = icmp ne i32 %30, 0
  br i1 %31, label %32, label %37

32:                                               ; preds = %27
  %33 = load i32, i32* %6, align 4
  %34 = call %struct.TYPE_4__* @tsvalue(i32 %33)
  %35 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %34, i32 0, i32 0
  %36 = load i64, i64* %35, align 8
  br label %38

37:                                               ; preds = %27
  br label %38

38:                                               ; preds = %37, %32
  %39 = phi i64 [ %36, %32 ], [ 0, %37 ]
  store i64 %39, i64* %7, align 8
  %40 = load i64, i64* %7, align 8
  store i64 %40, i64* %3, align 8
  br label %42

41:                                               ; preds = %2
  store i64 0, i64* %3, align 8
  br label %42

42:                                               ; preds = %41, %38, %23, %18, %13
  %43 = load i64, i64* %3, align 8
  ret i64 %43
}

declare dso_local i32 @index2adr(i32*, i32) #1

declare dso_local i32 @ttype(i32) #1

declare dso_local %struct.TYPE_4__* @tsvalue(i32) #1

declare dso_local %struct.TYPE_3__* @uvalue(i32) #1

declare dso_local i64 @luaH_getn(i32) #1

declare dso_local i32 @hvalue(i32) #1

declare dso_local i32 @luaV_tostring(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
